# mothership

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  design-principles.md  use-cases.md
.github/workflows/: ci.yml
docs/brainstorm/: early-spec.md  session-notes.md
docs/superpowers/specs/: 2026-04-17-v1-spec-map-design.md  2026-04-18-secrets-bridge-design.md  2026-04-19-audit-log-design.md  2026-04-19-plugin-bundle-signing-design.md  2026-04-19-supervisor-design.md
research/: claude-code-cowork-research.md  hermes-agent.md  openclaw.md
